--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ContOrga",
-  "version": "0.1.0",
+  "version": "0.3.0",
   "description": "A tool to track container around the world",
   "main": "main.js",
   "devDependencies": {
@@ -21,5 +21,8 @@
     "name": "Thorsten Schulz",
     "email": "thorsten.schulz.ger@googlemail.com",
     "url": "Ijee.site"
-  }
+  },
+  "contributors": [
+    "Alexander Röber"
+  ]
 }
