--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "ContOrga",
-  "version": "0.3.0",
+  "version": "0.8.0",
   "description": "A tool to track container around the world",
   "main": "main.js",
   "devDependencies": {
     "electron": "^1.8.2",
+    "excel4node": "^1.3.6",
     "node-sass": "^4.7.2",
     "nodemon": "^1.15.1"
   },
