--- a/package.json
+++ b/package.json
@@ -1,23 +1,8 @@
 {
   "name": "ContOrga",
-  "version": "0.8.0",
-  "description": "A tool to track container around the world",
+  "version": "0.9.0",
   "main": "main.js",
-  "devDependencies": {
-    "electron": "^1.8.2",
-    "excel4node": "^1.3.6",
-    "node-sass": "^4.7.2",
-    "nodemon": "^1.15.1"
-  },
-  "scripts": {
-    "start": "electron .",
-    "build-css": "node-sass --include-path scss app/scss/main.scss app/css/main.css",
-    "watch-css": "nodemon -e scss -x \"npm run build-css\""
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/Ijee/ContOrga"
-  },
+  "description": "A tool to track container around the world",
   "author": {
     "name": "Thorsten Schulz",
     "email": "thorsten.schulz.ger@googlemail.com",
@@ -25,5 +10,34 @@
   },
   "contributors": [
     "Alexander Röber"
-  ]
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Ijee/ContOrga"
+  },
+  "dependencies": {
+    "excel4node": "^1.3.6"
+    },
+  "devDependencies": {
+    "electron": "^1.8.2",
+    "excel4node": "^1.3.6",
+    "electron-builder": "^20.6.2",
+    "node-sass": "^4.7.2",
+    "nodemon": "^1.15.1"
+  },
+  "build": {
+    "appId": "ContOrga",
+    "win": {
+      "icon": "app/asset/icon.ico",
+      "target": "portable"
+    }
+  },
+  "scripts": {
+    "postinstall": "electron-builder install-app-deps",
+    "start": "electron .",
+    "build-css": "node-sass --include-path scss app/scss/main.scss app/css/main.css",
+    "watch-css": "nodemon -e scss -x \"npm run build-css\"",
+    "pack": "electron-builder --dir",
+    "dist": "electron-builder --win --x64 --ia32"
+  }
 }
