--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
   },
   "dependencies": {
     "excel4node": "^1.3.6"
-    },
+  },
   "devDependencies": {
     "electron": "^1.8.2",
     "excel4node": "^1.3.6",
     "electron-builder": "^20.6.2",
+    "devtron": "^1.3.0",
     "node-sass": "^4.7.2",
     "nodemon": "^1.15.1"
   },
@@ -35,6 +36,7 @@
   "scripts": {
     "postinstall": "electron-builder install-app-deps",
     "start": "electron .",
+    "dev": "electron . --debug",
     "build-css": "node-sass --include-path scss app/scss/main.scss app/css/main.css",
     "watch-css": "nodemon -e scss -x \"npm run build-css\"",
     "pack": "electron-builder --dir",
