--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "A tool to track container around the world",
   "author": {
     "name": "Thorsten Schulz",
-    "email": "thorsten.schulz.ger@googlemail.com",
+    "email": "IjeeX.Site@gmail.com",
     "url": "Ijee.site"
   },
   "contributors": [
@@ -19,12 +19,18 @@
     "excel4node": "^1.3.6"
   },
   "devDependencies": {
-    "electron": "^1.8.2",
-    "excel4node": "^1.3.6",
-    "electron-builder": "^20.6.2",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
     "devtron": "^1.3.0",
+    "electron": "^1.8.2",
+    "electron-builder": "^20.6.2",
+    "excel4node": "^1.3.6",
     "node-sass": "^4.7.2",
-    "nodemon": "^1.15.1"
+    "nodemon": "^1.15.1",
+    "swup": "^0.2.7",
+    "vue": "^2.5.16",
+    "vue-router": "^3.0.1",
+    "webpack": "^4.8.3"
   },
   "build": {
     "appId": "ContOrga",
@@ -37,6 +43,7 @@
     "postinstall": "electron-builder install-app-deps",
     "start": "electron .",
     "dev": "electron . --debug",
+    "build-prod": "webpack -p",
     "build-css": "node-sass --include-path scss app/scss/main.scss app/css/main.css",
     "watch-css": "nodemon -e scss -x \"npm run build-css\"",
     "pack": "electron-builder --dir",
