--- a/package.json
+++ b/package.json
@@ -1,52 +1,87 @@
 {
-  "name": "ContOrga",
-  "version": "0.9.0",
-  "main": "main.js",
-  "description": "A tool to track container around the world",
-  "author": {
-    "name": "Thorsten Schulz",
-    "email": "IjeeX.Site@gmail.com",
-    "url": "Ijee.site"
-  },
-  "contributors": [
-    "Alexander Röber"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/Ijee/ContOrga"
+  "name": "ContOrgaFTW",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint",
+    "test:unit": "vue-cli-service test:unit",
+    "build:electron": "vue-cli-service build:electron",
+    "serve:electron": "vue-cli-service serve:electron"
   },
   "dependencies": {
-    "excel4node": "^1.3.6"
+    "electron": "^2.0.2",
+    "eslint-plugin-vue": "^4.7.1",
+    "excel4node": "^1.5.0",
+    "register-service-worker": "^1.0.0",
+    "vue": "^2.5.16",
+    "vue-cli-plugin-electron-builder": "^1.0.0-beta.6",
+    "vue-router": "^3.0.1",
+    "friendly-errors-webpack-plugin": "^1.7.0"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.4",
-    "devtron": "^1.3.0",
-    "electron": "^1.8.2",
-    "electron-builder": "^20.6.2",
-    "excel4node": "^1.3.6",
-    "node-sass": "^4.7.2",
-    "nodemon": "^1.15.1",
-    "swup": "^0.2.7",
-    "vue": "^2.5.16",
-    "vue-router": "^3.0.1",
-    "webpack": "^4.8.3"
+    "@vue/cli-plugin-babel": "^3.0.0-rc.8",
+    "@vue/cli-plugin-eslint": "^3.0.0-rc.8",
+    "@vue/cli-plugin-pwa": "^3.0.0-rc.8",
+    "@vue/cli-plugin-unit-jest": "^3.0.0-rc.8",
+    "@vue/cli-service": "^3.0.0-rc.8",
+    "@vue/eslint-config-airbnb": "^3.0.0-rc.8",
+    "@vue/test-utils": "^1.0.0-beta.20",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-jest": "^23.4.2",
+    "electron": "^2.0.2",
+    "node-sass": "^4.9.0",
+    "sass-loader": "^7.0.1",
+    "vue-template-compiler": "^2.5.16"
   },
-  "build": {
-    "appId": "ContOrga",
-    "win": {
-      "icon": "app/asset/icon.ico",
-      "target": "portable"
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/recommended",
+      "@vue/airbnb"
+    ],
+    "rules": {
+      "prefer-template": 0
+    },
+    "parserOptions": {
+      "parser": "babel-eslint"
     }
   },
-  "scripts": {
-    "postinstall": "electron-builder install-app-deps",
-    "start": "electron .",
-    "dev": "electron . --debug",
-    "build-prod": "webpack -p",
-    "build-css": "node-sass --include-path scss app/scss/main.scss app/css/main.css",
-    "watch-css": "nodemon -e scss -x \"npm run build-css\"",
-    "pack": "electron-builder --dir",
-    "dist": "electron-builder --win --x64 --ia32"
-  }
+  "postcss": {
+    "plugins": {
+      "autoprefixer": {}
+    }
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ],
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "jsx",
+      "json",
+      "vue"
+    ],
+    "transform": {
+      "^.+\\.vue$": "vue-jest",
+      ".+\\.(css|styl|less|sass|scss|png|jpg|ttf|woff|woff2)$": "jest-transform-stub",
+      "^.+\\.jsx?$": "babel-jest"
+    },
+    "moduleNameMapper": {
+      "^@/(.*)$": "<rootDir>/src/$1"
+    },
+    "snapshotSerializers": [
+      "jest-serializer-vue"
+    ],
+    "testMatch": [
+      "**/tests/unit/**/*.spec.(js|jsx|ts|tsx)|**/__tests__/*.(js|jsx|ts|tsx)"
+    ]
+  },
+  "main": "dist_electron/bundled/background.js"
 }
