--- a/package.json
+++ b/package.json
@@ -11,22 +11,27 @@
     "serve:electron": "vue-cli-service serve:electron"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.2.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.2",
+    "@fortawesome/free-solid-svg-icons": "^5.2.0",
+    "@fortawesome/vue-fontawesome": "^0.1.1",
     "electron": "^2.0.2",
     "eslint-plugin-vue": "^4.7.1",
     "excel4node": "^1.5.0",
+    "friendly-errors-webpack-plugin": "^1.7.0",
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.16",
     "vue-cli-plugin-electron-builder": "^1.0.0-beta.6",
     "vue-router": "^3.0.1",
-    "friendly-errors-webpack-plugin": "^1.7.0"
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.0.0-rc.8",
-    "@vue/cli-plugin-eslint": "^3.0.0-rc.8",
-    "@vue/cli-plugin-pwa": "^3.0.0-rc.8",
-    "@vue/cli-plugin-unit-jest": "^3.0.0-rc.8",
-    "@vue/cli-service": "^3.0.0-rc.8",
-    "@vue/eslint-config-airbnb": "^3.0.0-rc.8",
+    "@vue/cli-plugin-babel": "^3.0.0-rc.9",
+    "@vue/cli-plugin-eslint": "^3.0.0-rc.9",
+    "@vue/cli-plugin-pwa": "^3.0.0-rc.9",
+    "@vue/cli-plugin-unit-jest": "^3.0.0-rc.9",
+    "@vue/cli-service": "^3.0.0-rc.9",
+    "@vue/eslint-config-airbnb": "^3.0.0-rc.9",
     "@vue/test-utils": "^1.0.0-beta.20",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^23.4.2",
